# neon-openapi-python-client

./: .gitignore  client-config.yaml  devenv.nix  flake.nix  requirements.txt  wrap-openapi-python-client.py
neon-crm/: README.md  pyproject.toml
neon-crm/neon_crm/: __init__.py
neon-crm/neon_crm/api/accounts/: add_using_post.py  create_contact_using_post.py  delete_using_delete.py  detail_using_get.py  get_contact_using_get.py  get_contacts_using_get.py  get_donations_using_get.py  get_event_registrations_using_get.py  get_pledges_using_get.py  (+12 more)
neon-crm/neon_crm/models/: __init__.py  account.py  account_contacts.py  account_custom_field_data.py  account_custom_field_data_account_type.py  account_donation_search_result.py  account_id_and_ref_id_result.py  account_id_result.py  account_order.py  account_order_item.py  account_order_item_type.py  account_order_status.py  account_pledge_search_result.py  account_role_api.py  account_search_result.py  account_search_result_item.py  account_search_result_item_user_type.py  account_windfall.py  acknowledgee.py  activity.py  activity_dates.py  activity_priority.py  add_fundraiser_to_campaign_using_post_response_200.py  add_payment_request.py  add_payment_request_transaction_type.py  address.py  address_add.py  address_add_fax_type.py  address_add_phone_1_type.py  address_add_phone_2_type.py  address_add_phone_3_type.py  address_fax_type.py  address_phone_1_type.py  address_phone_2_type.py  address_phone_3_type.py  admission_fee.py  api_message.py  assignment_volunteers.py  auto_number.py  base_custom_field_group.py  (+357 more)
(+251 files in other folders)
